...
  });

  return isLoaded ? (
    <LoadingScreen />
  ) : (
    <View style={appThemeStyles.mainContainer}>
      <ScrollView testID="candidate-profile-form-scroll">
        <WithDescriptionTitle
          title="Complete your information"
          description="To apply for some projects, make sure your information is complete"
          viewStyle={appThemeStyles.mainTitleContainer}
        />
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionPicker
              testID="main-role-picker"
              title="Your best role"
              description="Select the position you're comfortable with"
              values={roles}
              selected={value}
              onChangeValue={onChange}
              placeholder="Roles"
...
          <FormErrorMessage text={errors.role.message} noMargin />
        )}
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionInput
              testID="description-input-spoken-languages"
              titleProps={{
                title: 'What languages do you speak?',
                description:
                  'Use comma-separated values to list your languages',
              }}
              textInputProps={{
...
          <FormErrorMessage text={errors.spokenLanguages.message} noMargin />
        )}
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionInput
              testID="description-input-main-soft-skills"
              titleProps={{
                title: 'What are your main soft-skills?',
                description:
                  'Use comma-separated values to list your soft-skills',
              }}
              textInputProps={{
...
          <FormErrorMessage text={errors.mainSoftSkills.message} noMargin />
        )}
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionPicker
              testID="main-location-picker"
              title="Location"
              description="Select Your Country"
              values={countries}
              selected={value}
              onChangeValue={onChange}
              placeholder="Country"
...
          viewStyle={styles.secondaryTitleContainer}
        />
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionInput
              testID="description-input-certifications"
              titleProps={{
                title: 'Your certifications',
                description:
                  'Use comma-separated values to list your certifications',
              }}
              textInputProps={{
...
          viewStyle={styles.secondaryTitleContainer}
        />
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionInput
              testID="description-input-tech-skills"
              titleProps={{
                title: 'Your tech-skills',
                description:
                  'Use comma-separated values to list your tech-skills',
              }}
              textInputProps={{
...
          />
        )}
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionInput
              testID="description-input-programming-languages"
              titleProps={{
                title: 'Programming languages',
                description:
                  'Use comma-separated values to list your programming languages',
              }}
              textInputProps={{
...
          />
        )}
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionInput
              testID="description-input-technical-data-roles"
              titleProps={{
                title: 'Roles',
                description:
                  'Use comma-separated values to list your certifications',
              }}
              textInputProps={{
...
          />
        )}
        <Controller
          control={control}
          render={({field: {onChange, value}}) => (
            <WithDescriptionInput
              testID="description-input-years-of-experience"
              titleProps={{
                title: 'Year of Exp',
                description: '',
              }}
              textInputProps={{
                placeholder: '3',
...
