export const roles = ['fullstack', 'backend', 'frontend'];

export const employment = [
  'Full-Time',
  'Part-Time',
  'Contract',
  'Freelance',
  'Internship',
];

export const techRole = [
  'backend',
  'frontend',
  'fullstack',
  'devops',
  'architect',
];
